# glide

./: '  .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
glide/: Cargo.toml
glide/src/: cfg.rs  init.rs  main.rs
glide/src/cli/: mod.rs
http/: Cargo.toml
http/src/: error.rs  header.rs  lib.rs  request.rs  response.rs  uri.rs
http/src/header/: bytes.rs  field.rs  mod.rs  status.rs  uri.rs
http/src/header2/: bytes.rs  mod.rs  uri.rs
server/: Cargo.toml  build.rs
server/src/: config.rs  err.rs  lib.rs  request.rs
server/src/git/: mod.rs
server/src/preludes/: mod.rs
server/src/routes/: mod.rs  segments.rs
