# [package]
# name = "glide"
# version = "0.1.0"
# edition = "2024"
#



[workspace]
resolver = "3"
members = [ "glide", "http" , "server"]

[workspace.dependencies]
server = { path = "./server/"}
http = { path = "./http/"}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing"] }
